--- a/website/pages/docs/json/stringify.mdx
+++ b/website/pages/docs/json/stringify.mdx
@@ -99,114 +99,98 @@ interface IClerk {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/isStringify.js" showLineNumbers
+import * as __typia_transform__randomFormatUuid from "typia/lib/internal/_randomFormatUuid.js";
+import * as __typia_transform__randomString from "typia/lib/internal/_randomString.js";
+import * as __typia_transform__randomInteger from "typia/lib/internal/_randomInteger.js";
+import * as __typia_transform__randomArray from "typia/lib/internal/_randomArray.js";
+import * as __typia_transform__randomNumber from "typia/lib/internal/_randomNumber.js";
+import * as __typia_transform__randomFormatDate from "typia/lib/internal/_randomFormatDate.js";
+import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
+import * as __typia_transform__isTypeInt32 from "typia/lib/internal/_isTypeInt32.js";
+import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
+import * as __typia_transform__isFormatDate from "typia/lib/internal/_isFormatDate.js";
+import * as __typia_transform__jsonStringifyString from "typia/lib/internal/_jsonStringifyString.js";
+import * as __typia_transform__jsonStringifyNumber from "typia/lib/internal/_jsonStringifyNumber.js";
 import typia from "typia";
-const department = ((generator) => {
-  const $generator = typia.random.generator;
-  const $ro0 = (_recursive = false, _depth = 0) => ({
-    id:
-      (generator?.customs ?? $generator.customs)?.string?.([
-        {
-          name: 'Format<"uuid">',
-          kind: "format",
-          value: "uuid",
-        },
-      ]) ?? (generator?.uuid ?? $generator.uuid)(),
-    name:
-      (generator?.customs ?? $generator.customs)?.string?.([
-        {
-          name: "MinLength<3>",
-          kind: "minLength",
-          value: 3,
-        },
-      ]) ??
-      (generator?.string ?? $generator.string)(
-        (generator?.integer ?? $generator.integer)(3, 25),
-      ),
-    limit:
-      (generator?.customs ?? $generator.customs)?.number?.([
-        {
-          name: 'Type<"int32">',
-          kind: "type",
-          value: "int32",
-        },
-      ]) ?? (generator?.integer ?? $generator.integer)(0, 100),
-    clerks: (generator?.array ?? $generator.array)(() =>
-      $ro1(_recursive, _recursive ? 1 + _depth : _depth),
+const department = (() => {
+  const _ro0 = (_recursive = false, _depth = 0) => ({
+    id: (
+      _generator?.uuid ?? __typia_transform__randomFormatUuid._randomFormatUuid
+    )(),
+    name: (_generator?.string ?? __typia_transform__randomString._randomString)(
+      {
+        type: "string",
+        minLength: 3,
+      },
     ),
+    limit: (
+      _generator?.integer ?? __typia_transform__randomInteger._randomInteger
+    )({
+      type: "integer",
+    }),
+    clerks: (_generator?.array ?? __typia_transform__randomArray._randomArray)({
+      type: "array",
+      element: () => _ro1(_recursive, _recursive ? 1 + _depth : _depth),
+    }),
   });
-  const $ro1 = (_recursive = false, _depth = 0) => ({
-    name:
-      (generator?.customs ?? $generator.customs)?.string?.([]) ??
-      (generator?.string ?? $generator.string)(),
-    age:
-      (generator?.customs ?? $generator.customs)?.number?.([
-        {
-          name: 'Type<"uint32">',
-          kind: "type",
-          value: "uint32",
-        },
-        {
-          name: "ExclusiveMinimum<19>",
-          kind: "exclusiveMinimum",
-          value: 19,
-        },
-        {
-          name: "Maximum<100>",
-          kind: "maximum",
-          value: 100,
-        },
-      ]) ?? (generator?.integer ?? $generator.integer)(19, 100),
-    authority:
-      (generator?.customs ?? $generator.customs)?.number?.([]) ??
-      (generator?.number ?? $generator.number)(0, 100),
-    joined_at:
-      (generator?.customs ?? $generator.customs)?.string?.([
-        {
-          name: 'Format<"date">',
-          kind: "format",
-          value: "date",
-        },
-      ]) ?? (generator?.date ?? $generator.date)(),
+  const _ro1 = (_recursive = false, _depth = 0) => ({
+    name: (_generator?.string ?? __typia_transform__randomString._randomString)(
+      {
+        type: "string",
+      },
+    ),
+    age: (
+      _generator?.integer ?? __typia_transform__randomInteger._randomInteger
+    )({
+      type: "integer",
+      exclusiveMinimum: true,
+      minimum: 19,
+      maximum: 100,
+    }),
+    authority: (
+      _generator?.number ?? __typia_transform__randomNumber._randomNumber
+    )({
+      type: "number",
+    }),
+    joined_at: (
+      _generator?.date ?? __typia_transform__randomFormatDate._randomFormatDate
+    )(),
   });
-  return $ro0();
-})();
+  let _generator;
+  return (generator) => {
+    _generator = generator;
+    return _ro0();
+  };
+})()();
 const json = (() => {
-  const $string = typia.json.isStringify.string;
-  const $number = typia.json.isStringify.number;
-  const $io0 = (input) =>
+  const _io0 = (input) =>
     "string" === typeof input.id &&
-    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-      input.id,
-    ) &&
+    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
     "string" === typeof input.name &&
     3 <= input.name.length &&
     "number" === typeof input.limit &&
-    Math.floor(input.limit) === input.limit &&
-    -2147483648 <= input.limit &&
-    input.limit <= 2147483647 &&
+    __typia_transform__isTypeInt32._isTypeInt32(input.limit) &&
     Array.isArray(input.clerks) &&
     input.clerks.every(
-      (elem) => "object" === typeof elem && null !== elem && $io1(elem),
+      (elem) => "object" === typeof elem && null !== elem && _io1(elem),
     );
-  const $io1 = (input) =>
+  const _io1 = (input) =>
     "string" === typeof input.name &&
     "number" === typeof input.age &&
-    Math.floor(input.age) === input.age &&
-    0 <= input.age &&
-    input.age <= 4294967295 &&
+    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
     19 < input.age &&
     input.age <= 100 &&
     "number" === typeof input.authority &&
     !Number.isNaN(input.authority) &&
     "string" === typeof input.joined_at &&
-    /^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$/.test(input.joined_at);
-  const $so0 = (input) =>
-    `{"id":${$string(input.id)},"name":${$string(input.name)},"limit":${$number(input.limit)},"clerks":${`[${input.clerks.map((elem) => $so1(elem)).join(",")}]`}}`;
-  const $so1 = (input) =>
-    `{"name":${$string(input.name)},"age":${$number(input.age)},"authority":${$number(input.authority)},"joined_at":${$string(input.joined_at)}}`;
+    __typia_transform__isFormatDate._isFormatDate(input.joined_at);
+  const _so0 = (input) =>
+    `{"id":${__typia_transform__jsonStringifyString._jsonStringifyString(input.id)},"name":${__typia_transform__jsonStringifyString._jsonStringifyString(input.name)},"limit":${__typia_transform__jsonStringifyNumber._jsonStringifyNumber(input.limit)},"clerks":${`[${input.clerks.map((elem) => _so1(elem)).join(",")}]`}}`;
+  const _so1 = (input) =>
+    `{"name":${__typia_transform__jsonStringifyString._jsonStringifyString(input.name)},"age":${__typia_transform__jsonStringifyNumber._jsonStringifyNumber(input.age)},"authority":${__typia_transform__jsonStringifyNumber._jsonStringifyNumber(input.authority)},"joined_at":${__typia_transform__jsonStringifyString._jsonStringifyString(input.joined_at)}}`;
   const __is = (input) =>
-    "object" === typeof input && null !== input && $io0(input);
-  const __stringify = (input) => $so0(input);
+    "object" === typeof input && null !== input && _io0(input);
+  const __stringify = (input) => _so0(input);
   return (input) => (__is(input) ? __stringify(input) : null);
 })()(department);
 console.log(json); // not null, but string
@@ -299,54 +283,52 @@ interface IClerk {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/createAssertStringify.js" showLineNumbers
+import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
+import * as __typia_transform__isTypeInt32 from "typia/lib/internal/_isTypeInt32.js";
+import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
+import * as __typia_transform__isFormatDate from "typia/lib/internal/_isFormatDate.js";
+import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
+import * as __typia_transform__jsonStringifyString from "typia/lib/internal/_jsonStringifyString.js";
 import typia from "typia";
 export const assertDepartment = (() => {
-  const $guard = typia.json.createAssertStringify.guard;
-  const $string = typia.json.createAssertStringify.string;
-  const $io0 = (input) =>
+  const _io0 = (input) =>
     "string" === typeof input.id &&
-    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-      input.id,
-    ) &&
+    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
     "string" === typeof input.name &&
     3 <= input.name.length &&
     "number" === typeof input.limit &&
-    Math.floor(input.limit) === input.limit &&
-    -2147483648 <= input.limit &&
-    input.limit <= 2147483647 &&
+    __typia_transform__isTypeInt32._isTypeInt32(input.limit) &&
     Array.isArray(input.clerks) &&
     input.clerks.every(
-      (elem) => "object" === typeof elem && null !== elem && $io1(elem),
+      (elem) => "object" === typeof elem && null !== elem && _io1(elem),
     );
-  const $io1 = (input) =>
+  const _io1 = (input) =>
     "string" === typeof input.name &&
     "number" === typeof input.age &&
-    Math.floor(input.age) === input.age &&
-    0 <= input.age &&
-    input.age <= 4294967295 &&
+    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
     19 < input.age &&
     input.age <= 100 &&
     "number" === typeof input.authority &&
     !Number.isNaN(input.authority) &&
     "string" === typeof input.joined_at &&
-    /^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$/.test(input.joined_at);
-  const $ao0 = (input, _path, _exceptionable = true) =>
+    __typia_transform__isFormatDate._isFormatDate(input.joined_at);
+  const _ao0 = (input, _path, _exceptionable = true) =>
     (("string" === typeof input.id &&
-      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-        input.id,
-      ) ||
-        $guard(
+      (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.json.createAssertStringify",
             path: _path + ".id",
             expected: 'string & Format<"uuid">',
             value: input.id,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.json.createAssertStringify",
           path: _path + ".id",
           expected: '(string & Format<"uuid">)',
           value: input.id,
@@ -355,18 +337,20 @@ export const assertDepartment = (() => {
       )) &&
     (("string" === typeof input.name &&
       (3 <= input.name.length ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.json.createAssertStringify",
             path: _path + ".name",
             expected: "string & MinLength<3>",
             value: input.name,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.json.createAssertStringify",
           path: _path + ".name",
           expected: "(string & MinLength<3>)",
           value: input.name,
@@ -374,21 +358,21 @@ export const assertDepartment = (() => {
         _errorFactory,
       )) &&
     (("number" === typeof input.limit &&
-      ((Math.floor(input.limit) === input.limit &&
-        -2147483648 <= input.limit &&
-        input.limit <= 2147483647) ||
-        $guard(
+      (__typia_transform__isTypeInt32._isTypeInt32(input.limit) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.json.createAssertStringify",
             path: _path + ".limit",
             expected: 'number & Type<"int32">',
             value: input.limit,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.json.createAssertStringify",
           path: _path + ".limit",
           expected: '(number & Type<"int32">)',
           value: input.limit,
@@ -396,9 +380,10 @@ export const assertDepartment = (() => {
         _errorFactory,
       )) &&
     (((Array.isArray(input.clerks) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.json.createAssertStringify",
           path: _path + ".clerks",
           expected: "Array<IClerk>",
           value: input.clerks,
@@ -408,23 +393,25 @@ export const assertDepartment = (() => {
       input.clerks.every(
         (elem, _index2) =>
           ((("object" === typeof elem && null !== elem) ||
-            $guard(
+            __typia_transform__assertGuard._assertGuard(
               _exceptionable,
               {
+                method: "typia.json.createAssertStringify",
                 path: _path + ".clerks[" + _index2 + "]",
                 expected: "IClerk",
                 value: elem,
               },
               _errorFactory,
             )) &&
-            $ao1(
+            _ao1(
               elem,
               _path + ".clerks[" + _index2 + "]",
               true && _exceptionable,
             )) ||
-          $guard(
+          __typia_transform__assertGuard._assertGuard(
             _exceptionable,
             {
+              method: "typia.json.createAssertStringify",
               path: _path + ".clerks[" + _index2 + "]",
               expected: "IClerk",
               value: elem,
@@ -432,20 +419,22 @@ export const assertDepartment = (() => {
             _errorFactory,
           ),
       )) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.json.createAssertStringify",
           path: _path + ".clerks",
           expected: "Array<IClerk>",
           value: input.clerks,
         },
         _errorFactory,
       ));
-  const $ao1 = (input, _path, _exceptionable = true) =>
+  const _ao1 = (input, _path, _exceptionable = true) =>
     ("string" === typeof input.name ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.json.createAssertStringify",
           path: _path + ".name",
           expected: "string",
           value: input.name,
@@ -453,12 +442,11 @@ export const assertDepartment = (() => {
         _errorFactory,
       )) &&
     (("number" === typeof input.age &&
-      ((Math.floor(input.age) === input.age &&
-        0 <= input.age &&
-        input.age <= 4294967295) ||
-        $guard(
+      (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.json.createAssertStringify",
             path: _path + ".age",
             expected: 'number & Type<"uint32">',
             value: input.age,
@@ -466,9 +454,10 @@ export const assertDepartment = (() => {
           _errorFactory,
         )) &&
       (19 < input.age ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.json.createAssertStringify",
             path: _path + ".age",
             expected: "number & ExclusiveMinimum<19>",
             value: input.age,
@@ -476,18 +465,20 @@ export const assertDepartment = (() => {
           _errorFactory,
         )) &&
       (input.age <= 100 ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.json.createAssertStringify",
             path: _path + ".age",
             expected: "number & Maximum<100>",
             value: input.age,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.json.createAssertStringify",
           path: _path + ".age",
           expected:
             '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
@@ -496,9 +487,10 @@ export const assertDepartment = (() => {
         _errorFactory,
       )) &&
     (("number" === typeof input.authority && !Number.isNaN(input.authority)) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.json.createAssertStringify",
           path: _path + ".authority",
           expected: "number",
           value: input.authority,
@@ -506,52 +498,54 @@ export const assertDepartment = (() => {
         _errorFactory,
       )) &&
     (("string" === typeof input.joined_at &&
-      (/^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$/.test(
-        input.joined_at,
-      ) ||
-        $guard(
+      (__typia_transform__isFormatDate._isFormatDate(input.joined_at) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.json.createAssertStringify",
             path: _path + ".joined_at",
             expected: 'string & Format<"date">',
             value: input.joined_at,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.json.createAssertStringify",
           path: _path + ".joined_at",
           expected: '(string & Format<"date">)',
           value: input.joined_at,
         },
         _errorFactory,
       ));
-  const $so0 = (input) =>
-    `{"id":${$string(input.id)},"name":${$string(input.name)},"limit":${input.limit},"clerks":${`[${input.clerks.map((elem) => $so1(elem)).join(",")}]`}}`;
-  const $so1 = (input) =>
-    `{"name":${$string(input.name)},"age":${input.age},"authority":${input.authority},"joined_at":${$string(input.joined_at)}}`;
+  const _so0 = (input) =>
+    `{"id":${__typia_transform__jsonStringifyString._jsonStringifyString(input.id)},"name":${__typia_transform__jsonStringifyString._jsonStringifyString(input.name)},"limit":${input.limit},"clerks":${`[${input.clerks.map((elem) => _so1(elem)).join(",")}]`}}`;
+  const _so1 = (input) =>
+    `{"name":${__typia_transform__jsonStringifyString._jsonStringifyString(input.name)},"age":${input.age},"authority":${input.authority},"joined_at":${__typia_transform__jsonStringifyString._jsonStringifyString(input.joined_at)}}`;
   const __is = (input) =>
-    "object" === typeof input && null !== input && $io0(input);
+    "object" === typeof input && null !== input && _io0(input);
   let _errorFactory;
   const __assert = (input, errorFactory) => {
     if (false === __is(input)) {
       _errorFactory = errorFactory;
       ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(
+          __typia_transform__assertGuard._assertGuard(
             true,
             {
+              method: "typia.json.createAssertStringify",
               path: _path + "",
               expected: "IDepartment",
               value: input,
             },
             _errorFactory,
           )) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(
+          _ao0(input, _path + "", true)) ||
+        __typia_transform__assertGuard._assertGuard(
           true,
           {
+            method: "typia.json.createAssertStringify",
             path: _path + "",
             expected: "IDepartment",
             value: input,
@@ -561,7 +555,7 @@ export const assertDepartment = (() => {
     }
     return input;
   };
-  const __stringify = (input) => $so0(input);
+  const __stringify = (input) => _so0(input);
   return (input, errorFactory) => {
     __assert(input, errorFactory);
     return __stringify(input);
