--- a/website/pages/docs/pure.mdx
+++ b/website/pages/docs/pure.mdx
@@ -370,18 +370,18 @@ export const assertArticle = typia.createAssert<IBbsArticle>();
   </Tab>
   <Tab>
 ```javascript filename="assertArticle.js" showLineNumbers
+import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
+import * as __typia_transform__isFormatDateTime from "typia/lib/internal/_isFormatDateTime.js";
+import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
 import typia from "typia";
 export const assertArticle = (() => {
-  const $guard = typia.createAssert.guard;
-  const $io0 = (input) =>
+  const _io0 = (input) =>
     "string" === typeof input.id &&
-    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-      input.id,
-    ) &&
+    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
     (null === input.files ||
       (Array.isArray(input.files) &&
         input.files.every(
-          (elem) => "object" === typeof elem && null !== elem && $io1(elem),
+          (elem) => "object" === typeof elem && null !== elem && _io1(elem),
         ))) &&
     (null === input.title ||
       ("string" === typeof input.title &&
@@ -389,35 +389,33 @@ export const assertArticle = (() => {
         input.title.length <= 100)) &&
     "string" === typeof input.body &&
     "string" === typeof input.created_at &&
-    /^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])(T|\s)([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9](?:\.[0-9]{1,9})?(Z|[+-]([01][0-9]|2[0-3]):[0-5][0-9])$/i.test(
-      input.created_at,
-    );
-  const $io1 = (input) =>
+    __typia_transform__isFormatDateTime._isFormatDateTime(input.created_at);
+  const _io1 = (input) =>
     "string" === typeof input.name &&
-    /^[a-z0-9]+$/.test(input.name) &&
+    RegExp("^[a-z0-9]+$").test(input.name) &&
     input.name.length <= 255 &&
     (null === input.extension ||
       ("string" === typeof input.extension &&
-        /^[a-z0-9]+$/.test(input.extension) &&
+        RegExp("^[a-z0-9]+$").test(input.extension) &&
         input.extension.length <= 8)) &&
     "string" === typeof input.url;
-  const $ao0 = (input, _path, _exceptionable = true) =>
+  const _ao0 = (input, _path, _exceptionable = true) =>
     (("string" === typeof input.id &&
-      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-        input.id,
-      ) ||
-        $guard(
+      (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".id",
             expected: 'string & Format<"uuid">',
             value: input.id,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".id",
           expected: '(string & Format<"uuid">)',
           value: input.id,
@@ -426,9 +424,10 @@ export const assertArticle = (() => {
       )) &&
     (null === input.files ||
       ((Array.isArray(input.files) ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".files",
             expected: "(Array<IAttachmentFile> | null)",
             value: input.files,
@@ -438,23 +437,25 @@ export const assertArticle = (() => {
         input.files.every(
           (elem, _index2) =>
             ((("object" === typeof elem && null !== elem) ||
-              $guard(
+              __typia_transform__assertGuard._assertGuard(
                 _exceptionable,
                 {
+                  method: "typia.createAssert",
                   path: _path + ".files[" + _index2 + "]",
                   expected: "IAttachmentFile",
                   value: elem,
                 },
                 _errorFactory,
               )) &&
-              $ao1(
+              _ao1(
                 elem,
                 _path + ".files[" + _index2 + "]",
                 true && _exceptionable,
               )) ||
-            $guard(
+            __typia_transform__assertGuard._assertGuard(
               _exceptionable,
               {
+                method: "typia.createAssert",
                 path: _path + ".files[" + _index2 + "]",
                 expected: "IAttachmentFile",
                 value: elem,
@@ -462,9 +463,10 @@ export const assertArticle = (() => {
               _errorFactory,
             ),
         )) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".files",
           expected: "(Array<IAttachmentFile> | null)",
           value: input.files,
@@ -474,9 +476,10 @@ export const assertArticle = (() => {
     (null === input.title ||
       ("string" === typeof input.title &&
         (5 <= input.title.length ||
-          $guard(
+          __typia_transform__assertGuard._assertGuard(
             _exceptionable,
             {
+              method: "typia.createAssert",
               path: _path + ".title",
               expected: "string & MinLength<5>",
               value: input.title,
@@ -484,18 +487,20 @@ export const assertArticle = (() => {
             _errorFactory,
           )) &&
         (input.title.length <= 100 ||
-          $guard(
+          __typia_transform__assertGuard._assertGuard(
             _exceptionable,
             {
+              method: "typia.createAssert",
               path: _path + ".title",
               expected: "string & MaxLength<100>",
               value: input.title,
             },
             _errorFactory,
           ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".title",
           expected: "((string & MinLength<5> & MaxLength<100>) | null)",
           value: input.title,
@@ -503,9 +508,10 @@ export const assertArticle = (() => {
         _errorFactory,
       )) &&
     ("string" === typeof input.body ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".body",
           expected: "string",
           value: input.body,
@@ -513,33 +519,36 @@ export const assertArticle = (() => {
         _errorFactory,
       )) &&
     (("string" === typeof input.created_at &&
-      (/^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])(T|\s)([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9](?:\.[0-9]{1,9})?(Z|[+-]([01][0-9]|2[0-3]):[0-5][0-9])$/i.test(
+      (__typia_transform__isFormatDateTime._isFormatDateTime(
         input.created_at,
       ) ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".created_at",
             expected: 'string & Format<"date-time">',
             value: input.created_at,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".created_at",
           expected: '(string & Format<"date-time">)',
           value: input.created_at,
         },
         _errorFactory,
       ));
-  const $ao1 = (input, _path, _exceptionable = true) =>
+  const _ao1 = (input, _path, _exceptionable = true) =>
     (("string" === typeof input.name &&
-      (/^[a-z0-9]+$/.test(input.name) ||
-        $guard(
+      (RegExp("^[a-z0-9]+$").test(input.name) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".name",
             expected: 'string & Pattern<"^[a-z0-9]+$">',
             value: input.name,
@@ -547,18 +556,20 @@ export const assertArticle = (() => {
           _errorFactory,
         )) &&
       (input.name.length <= 255 ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".name",
             expected: "string & MaxLength<255>",
             value: input.name,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".name",
           expected: '(string & Pattern<"^[a-z0-9]+$"> & MaxLength<255>)',
           value: input.name,
@@ -567,10 +578,11 @@ export const assertArticle = (() => {
       )) &&
     (null === input.extension ||
       ("string" === typeof input.extension &&
-        (/^[a-z0-9]+$/.test(input.extension) ||
-          $guard(
+        (RegExp("^[a-z0-9]+$").test(input.extension) ||
+          __typia_transform__assertGuard._assertGuard(
             _exceptionable,
             {
+              method: "typia.createAssert",
               path: _path + ".extension",
               expected: 'string & Pattern<"^[a-z0-9]+$">',
               value: input.extension,
@@ -578,18 +590,20 @@ export const assertArticle = (() => {
             _errorFactory,
           )) &&
         (input.extension.length <= 8 ||
-          $guard(
+          __typia_transform__assertGuard._assertGuard(
             _exceptionable,
             {
+              method: "typia.createAssert",
               path: _path + ".extension",
               expected: "string & MaxLength<8>",
               value: input.extension,
             },
             _errorFactory,
           ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".extension",
           expected: '((string & Pattern<"^[a-z0-9]+$"> & MaxLength<8>) | null)',
           value: input.extension,
@@ -597,9 +611,10 @@ export const assertArticle = (() => {
         _errorFactory,
       )) &&
     ("string" === typeof input.url ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".url",
           expected: "string",
           value: input.url,
@@ -607,26 +622,28 @@ export const assertArticle = (() => {
         _errorFactory,
       ));
   const __is = (input) =>
-    "object" === typeof input && null !== input && $io0(input);
+    "object" === typeof input && null !== input && _io0(input);
   let _errorFactory;
   return (input, errorFactory) => {
     if (false === __is(input)) {
       _errorFactory = errorFactory;
       ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(
+          __typia_transform__assertGuard._assertGuard(
             true,
             {
+              method: "typia.createAssert",
               path: _path + "",
               expected: "IBbsArticle",
               value: input,
             },
             _errorFactory,
           )) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(
+          _ao0(input, _path + "", true)) ||
+        __typia_transform__assertGuard._assertGuard(
           true,
           {
+            method: "typia.createAssert",
             path: _path + "",
             expected: "IBbsArticle",
             value: input,
