--- a/website/pages/docs/validators/assert.mdx
+++ b/website/pages/docs/validators/assert.mdx
@@ -75,42 +75,39 @@ interface IMember {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/assert.js" showLineNumbers
+import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
+import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
+import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
+import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
 import typia from "typia";
 import { v4 } from "uuid";
 (() => {
-  const $guard = typia.assert.guard;
-  const $io0 = (input) =>
+  const _io0 = (input) =>
     "string" === typeof input.id &&
-    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-      input.id,
-    ) &&
+    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
     "string" === typeof input.email &&
-    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-      input.email,
-    ) &&
+    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
     "number" === typeof input.age &&
-    Math.floor(input.age) === input.age &&
-    0 <= input.age &&
-    input.age <= 4294967295 &&
+    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
     19 < input.age &&
     input.age <= 100;
-  const $ao0 = (input, _path, _exceptionable = true) =>
+  const _ao0 = (input, _path, _exceptionable = true) =>
     (("string" === typeof input.id &&
-      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-        input.id,
-      ) ||
-        $guard(
+      (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.assert",
             path: _path + ".id",
             expected: 'string & Format<"uuid">',
             value: input.id,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.assert",
           path: _path + ".id",
           expected: '(string & Format<"uuid">)',
           value: input.id,
@@ -118,21 +115,21 @@ import { v4 } from "uuid";
         _errorFactory,
       )) &&
     (("string" === typeof input.email &&
-      (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-        input.email,
-      ) ||
-        $guard(
+      (__typia_transform__isFormatEmail._isFormatEmail(input.email) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.assert",
             path: _path + ".email",
             expected: 'string & Format<"email">',
             value: input.email,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.assert",
           path: _path + ".email",
           expected: '(string & Format<"email">)',
           value: input.email,
@@ -140,12 +137,11 @@ import { v4 } from "uuid";
         _errorFactory,
       )) &&
     (("number" === typeof input.age &&
-      ((Math.floor(input.age) === input.age &&
-        0 <= input.age &&
-        input.age <= 4294967295) ||
-        $guard(
+      (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.assert",
             path: _path + ".age",
             expected: 'number & Type<"uint32">',
             value: input.age,
@@ -153,9 +149,10 @@ import { v4 } from "uuid";
           _errorFactory,
         )) &&
       (19 < input.age ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.assert",
             path: _path + ".age",
             expected: "number & ExclusiveMinimum<19>",
             value: input.age,
@@ -163,18 +160,20 @@ import { v4 } from "uuid";
           _errorFactory,
         )) &&
       (input.age <= 100 ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.assert",
             path: _path + ".age",
             expected: "number & Maximum<100>",
             value: input.age,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.assert",
           path: _path + ".age",
           expected:
             '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
@@ -183,26 +182,28 @@ import { v4 } from "uuid";
         _errorFactory,
       ));
   const __is = (input) =>
-    "object" === typeof input && null !== input && $io0(input);
+    "object" === typeof input && null !== input && _io0(input);
   let _errorFactory;
   return (input, errorFactory) => {
     if (false === __is(input)) {
       _errorFactory = errorFactory;
       ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(
+          __typia_transform__assertGuard._assertGuard(
             true,
             {
+              method: "typia.assert",
               path: _path + "",
               expected: "IMember",
               value: input,
             },
             _errorFactory,
           )) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(
+          _ao0(input, _path + "", true)) ||
+        __typia_transform__assertGuard._assertGuard(
           true,
           {
+            method: "typia.assert",
             path: _path + "",
             expected: "IMember",
             value: input,
@@ -283,42 +284,39 @@ interface IMember {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/assertEquals.js" showLineNumbers
+import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
+import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
+import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
+import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
 import typia from "typia";
 import { v4 } from "uuid";
 (() => {
-  const $guard = typia.assert.guard;
-  const $io0 = (input) =>
+  const _io0 = (input) =>
     "string" === typeof input.id &&
-    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-      input.id,
-    ) &&
+    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
     "string" === typeof input.email &&
-    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-      input.email,
-    ) &&
+    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
     "number" === typeof input.age &&
-    Math.floor(input.age) === input.age &&
-    0 <= input.age &&
-    input.age <= 4294967295 &&
+    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
     19 < input.age &&
     input.age <= 100;
-  const $ao0 = (input, _path, _exceptionable = true) =>
+  const _ao0 = (input, _path, _exceptionable = true) =>
     (("string" === typeof input.id &&
-      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-        input.id,
-      ) ||
-        $guard(
+      (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.assert",
             path: _path + ".id",
             expected: 'string & Format<"uuid">',
             value: input.id,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.assert",
           path: _path + ".id",
           expected: '(string & Format<"uuid">)',
           value: input.id,
@@ -326,21 +324,21 @@ import { v4 } from "uuid";
         _errorFactory,
       )) &&
     (("string" === typeof input.email &&
-      (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-        input.email,
-      ) ||
-        $guard(
+      (__typia_transform__isFormatEmail._isFormatEmail(input.email) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.assert",
             path: _path + ".email",
             expected: 'string & Format<"email">',
             value: input.email,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.assert",
           path: _path + ".email",
           expected: '(string & Format<"email">)',
           value: input.email,
@@ -348,12 +346,11 @@ import { v4 } from "uuid";
         _errorFactory,
       )) &&
     (("number" === typeof input.age &&
-      ((Math.floor(input.age) === input.age &&
-        0 <= input.age &&
-        input.age <= 4294967295) ||
-        $guard(
+      (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.assert",
             path: _path + ".age",
             expected: 'number & Type<"uint32">',
             value: input.age,
@@ -361,9 +358,10 @@ import { v4 } from "uuid";
           _errorFactory,
         )) &&
       (19 < input.age ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.assert",
             path: _path + ".age",
             expected: "number & ExclusiveMinimum<19>",
             value: input.age,
@@ -371,18 +369,20 @@ import { v4 } from "uuid";
           _errorFactory,
         )) &&
       (input.age <= 100 ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.assert",
             path: _path + ".age",
             expected: "number & Maximum<100>",
             value: input.age,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.assert",
           path: _path + ".age",
           expected:
             '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
@@ -391,26 +391,28 @@ import { v4 } from "uuid";
         _errorFactory,
       ));
   const __is = (input) =>
-    "object" === typeof input && null !== input && $io0(input);
+    "object" === typeof input && null !== input && _io0(input);
   let _errorFactory;
   return (input, errorFactory) => {
     if (false === __is(input)) {
       _errorFactory = errorFactory;
       ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(
+          __typia_transform__assertGuard._assertGuard(
             true,
             {
+              method: "typia.assert",
               path: _path + "",
               expected: "IMember",
               value: input,
             },
             _errorFactory,
           )) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(
+          _ao0(input, _path + "", true)) ||
+        __typia_transform__assertGuard._assertGuard(
           true,
           {
+            method: "typia.assert",
             path: _path + "",
             expected: "IMember",
             value: input,
@@ -546,41 +548,38 @@ interface IMember {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/createAssert.js" showLineNumbers
+import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
+import * as __typia_transform__isFormatEmail from "typia/lib/internal/_isFormatEmail.js";
+import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
+import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
 import typia from "typia";
 export const assertMember = (() => {
-  const $guard = typia.createAssert.guard;
-  const $io0 = (input) =>
+  const _io0 = (input) =>
     "string" === typeof input.id &&
-    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-      input.id,
-    ) &&
+    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
     "string" === typeof input.email &&
-    /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-      input.email,
-    ) &&
+    __typia_transform__isFormatEmail._isFormatEmail(input.email) &&
     "number" === typeof input.age &&
-    Math.floor(input.age) === input.age &&
-    0 <= input.age &&
-    input.age <= 4294967295 &&
+    __typia_transform__isTypeUint32._isTypeUint32(input.age) &&
     19 < input.age &&
     input.age <= 100;
-  const $ao0 = (input, _path, _exceptionable = true) =>
+  const _ao0 = (input, _path, _exceptionable = true) =>
     (("string" === typeof input.id &&
-      (/^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-        input.id,
-      ) ||
-        $guard(
+      (__typia_transform__isFormatUuid._isFormatUuid(input.id) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".id",
             expected: 'string & Format<"uuid">',
             value: input.id,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".id",
           expected: '(string & Format<"uuid">)',
           value: input.id,
@@ -588,21 +587,21 @@ export const assertMember = (() => {
         _errorFactory,
       )) &&
     (("string" === typeof input.email &&
-      (/^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?$/i.test(
-        input.email,
-      ) ||
-        $guard(
+      (__typia_transform__isFormatEmail._isFormatEmail(input.email) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".email",
             expected: 'string & Format<"email">',
             value: input.email,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".email",
           expected: '(string & Format<"email">)',
           value: input.email,
@@ -610,12 +609,11 @@ export const assertMember = (() => {
         _errorFactory,
       )) &&
     (("number" === typeof input.age &&
-      ((Math.floor(input.age) === input.age &&
-        0 <= input.age &&
-        input.age <= 4294967295) ||
-        $guard(
+      (__typia_transform__isTypeUint32._isTypeUint32(input.age) ||
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".age",
             expected: 'number & Type<"uint32">',
             value: input.age,
@@ -623,9 +621,10 @@ export const assertMember = (() => {
           _errorFactory,
         )) &&
       (19 < input.age ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".age",
             expected: "number & ExclusiveMinimum<19>",
             value: input.age,
@@ -633,18 +632,20 @@ export const assertMember = (() => {
           _errorFactory,
         )) &&
       (input.age <= 100 ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".age",
             expected: "number & Maximum<100>",
             value: input.age,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".age",
           expected:
             '(number & Type<"uint32"> & ExclusiveMinimum<19> & Maximum<100>)',
@@ -653,26 +654,28 @@ export const assertMember = (() => {
         _errorFactory,
       ));
   const __is = (input) =>
-    "object" === typeof input && null !== input && $io0(input);
+    "object" === typeof input && null !== input && _io0(input);
   let _errorFactory;
   return (input, errorFactory) => {
     if (false === __is(input)) {
       _errorFactory = errorFactory;
       ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(
+          __typia_transform__assertGuard._assertGuard(
             true,
             {
+              method: "typia.createAssert",
               path: _path + "",
               expected: "IMember",
               value: input,
             },
             _errorFactory,
           )) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(
+          _ao0(input, _path + "", true)) ||
+        __typia_transform__assertGuard._assertGuard(
           true,
           {
+            method: "typia.createAssert",
             path: _path + "",
             expected: "IMember",
             value: input,
@@ -831,10 +834,10 @@ interface Something {
   </Tab>
   <Tab>
 ```javascript filename="examples/bin/assert-custom-tags.js" showLineNumbers
+import * as __typia_transform__assertGuard from "typia/lib/internal/_assertGuard.js";
 import typia from "typia";
 export const assertSomething = (() => {
-  const $guard = typia.createAssert.guard;
-  const $io0 = (input) =>
+  const _io0 = (input) =>
     "string" === typeof input.dollar &&
     input.dollar[0] === "$" &&
     !isNaN(Number(input.dollar.substring(1).split(",").join(""))) &&
@@ -842,22 +845,24 @@ export const assertSomething = (() => {
     input.postfix.endsWith("!!!") &&
     "number" === typeof input.isEven &&
     input.isEven % 2 === 0;
-  const $ao0 = (input, _path, _exceptionable = true) =>
+  const _ao0 = (input, _path, _exceptionable = true) =>
     (("string" === typeof input.dollar &&
       ((input.dollar[0] === "$" &&
         !isNaN(Number(input.dollar.substring(1).split(",").join("")))) ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".dollar",
             expected: "string & Dollar",
             value: input.dollar,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".dollar",
           expected: "(string & Dollar)",
           value: input.dollar,
@@ -866,18 +871,20 @@ export const assertSomething = (() => {
       )) &&
     (("string" === typeof input.postfix &&
       (input.postfix.endsWith("!!!") ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".postfix",
             expected: 'string & Postfix<"!!!">',
             value: input.postfix,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".postfix",
           expected: '(string & Postfix<"!!!">)',
           value: input.postfix,
@@ -886,18 +893,20 @@ export const assertSomething = (() => {
       )) &&
     (("number" === typeof input.isEven &&
       (input.isEven % 2 === 0 ||
-        $guard(
+        __typia_transform__assertGuard._assertGuard(
           _exceptionable,
           {
+            method: "typia.createAssert",
             path: _path + ".isEven",
             expected: "number & IsEven<number>",
             value: input.isEven,
           },
           _errorFactory,
         ))) ||
-      $guard(
+      __typia_transform__assertGuard._assertGuard(
         _exceptionable,
         {
+          method: "typia.createAssert",
           path: _path + ".isEven",
           expected: "(number & IsEven<number>)",
           value: input.isEven,
@@ -905,26 +914,28 @@ export const assertSomething = (() => {
         _errorFactory,
       ));
   const __is = (input) =>
-    "object" === typeof input && null !== input && $io0(input);
+    "object" === typeof input && null !== input && _io0(input);
   let _errorFactory;
   return (input, errorFactory) => {
     if (false === __is(input)) {
       _errorFactory = errorFactory;
       ((input, _path, _exceptionable = true) =>
         ((("object" === typeof input && null !== input) ||
-          $guard(
+          __typia_transform__assertGuard._assertGuard(
             true,
             {
+              method: "typia.createAssert",
               path: _path + "",
               expected: "Something",
               value: input,
             },
             _errorFactory,
           )) &&
-          $ao0(input, _path + "", true)) ||
-        $guard(
+          _ao0(input, _path + "", true)) ||
+        __typia_transform__assertGuard._assertGuard(
           true,
           {
+            method: "typia.createAssert",
             path: _path + "",
             expected: "Something",
             value: input,
