--- a/website/pages/docs/validators/tags.mdx
+++ b/website/pages/docs/validators/tags.mdx
@@ -66,9 +66,13 @@ interface CustomTag {
   </Tab>
   <Tab>
 ```javascript filename="is.tag.js" showLineNumbers
+import * as __typia_transform__isFormatIpv4 from "typia/lib/internal/_isFormatIpv4.js";
+import * as __typia_transform__isFormatIpv6 from "typia/lib/internal/_isFormatIpv6.js";
+import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
+import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
 import typia from "typia";
 export const checkCustomTag = (() => {
-  const $io0 = (input) =>
+  const _io0 = (input) =>
     "number" === typeof input.type &&
     Math.floor(input.type) === input.type &&
     0 <= input.type &&
@@ -80,24 +84,18 @@ export const checkCustomTag = (() => {
     "string" === typeof input.string &&
     3 <= input.string.length &&
     "string" === typeof input.pattern &&
-    /^[a-z]+$/.test(input.pattern) &&
+    RegExp("^[a-z]+$").test(input.pattern) &&
     (null === input.format ||
       ("string" === typeof input.format &&
-        (/^(?:(?:25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)\.){3}(?:25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)$/.test(
-          input.format,
-        ) ||
-          /^((([0-9a-f]{1,4}:){7}([0-9a-f]{1,4}|:))|(([0-9a-f]{1,4}:){6}(:[0-9a-f]{1,4}|((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3})|:))|(([0-9a-f]{1,4}:){5}(((:[0-9a-f]{1,4}){1,2})|:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3})|:))|(([0-9a-f]{1,4}:){4}(((:[0-9a-f]{1,4}){1,3})|((:[0-9a-f]{1,4})?:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3}))|:))|(([0-9a-f]{1,4}:){3}(((:[0-9a-f]{1,4}){1,4})|((:[0-9a-f]{1,4}){0,2}:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3}))|:))|(([0-9a-f]{1,4}:){2}(((:[0-9a-f]{1,4}){1,5})|((:[0-9a-f]{1,4}){0,3}:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3}))|:))|(([0-9a-f]{1,4}:){1}(((:[0-9a-f]{1,4}){1,6})|((:[0-9a-f]{1,4}){0,4}:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3}))|:))|(:(((:[0-9a-f]{1,4}){1,7})|((:[0-9a-f]{1,4}){0,5}:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3}))|:)))$/i.test(
-            input.format,
-          )))) &&
+        (__typia_transform__isFormatIpv4._isFormatIpv4(input.format) ||
+          __typia_transform__isFormatIpv6._isFormatIpv6(input.format)))) &&
     Array.isArray(input.array) &&
     3 <= input.array.length &&
     input.array.length <= 100 &&
     input.array.every(
       (elem) =>
         "string" === typeof elem &&
-        /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-          elem,
-        ),
+        __typia_transform__isFormatUuid._isFormatUuid(elem),
     ) &&
     input.map instanceof Map &&
     (() =>
@@ -106,20 +104,16 @@ export const checkCustomTag = (() => {
           Array.isArray(elem) &&
           elem.length === 2 &&
           "number" === typeof elem[0] &&
-          Math.floor(elem[0]) === elem[0] &&
-          0 <= elem[0] &&
-          elem[0] <= 4294967295 &&
+          __typia_transform__isTypeUint32._isTypeUint32(elem[0]) &&
           Array.isArray(elem[1]) &&
           1 <= elem[1].length &&
           elem[1].every(
             (elem) =>
               "string" === typeof elem &&
-              /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-                elem,
-              ),
+              __typia_transform__isFormatUuid._isFormatUuid(elem),
           ),
       ))();
-  return (input) => "object" === typeof input && null !== input && $io0(input);
+  return (input) => "object" === typeof input && null !== input && _io0(input);
 })();
 ```
   </Tab>
@@ -240,13 +234,15 @@ interface CustomTag {
   </Tab>
   <Tab>
 ```javascript filename="is.tag.js" showLineNumbers
+import * as __typia_transform__isTypeUint32 from "typia/lib/internal/_isTypeUint32.js";
+import * as __typia_transform__isFormatIpv4 from "typia/lib/internal/_isFormatIpv4.js";
+import * as __typia_transform__isFormatIpv6 from "typia/lib/internal/_isFormatIpv6.js";
+import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
 import typia from "typia";
 export const checkCustomTag = (() => {
-  const $io0 = (input) =>
+  const _io0 = (input) =>
     "number" === typeof input.type &&
-    Math.floor(input.type) === input.type &&
-    0 <= input.type &&
-    input.type <= 4294967295 &&
+    __typia_transform__isTypeUint32._isTypeUint32(input.type) &&
     (undefined === input.number ||
       ("number" === typeof input.number &&
         19 < input.number &&
@@ -254,24 +250,18 @@ export const checkCustomTag = (() => {
     "string" === typeof input.string &&
     3 <= input.string.length &&
     "string" === typeof input.pattern &&
-    /^[a-z]+$/.test(input.pattern) &&
+    RegExp("^[a-z]+$").test(input.pattern) &&
     (null === input.format ||
       ("string" === typeof input.format &&
-        (/^(?:(?:25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)\.){3}(?:25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)$/.test(
-          input.format,
-        ) ||
-          /^((([0-9a-f]{1,4}:){7}([0-9a-f]{1,4}|:))|(([0-9a-f]{1,4}:){6}(:[0-9a-f]{1,4}|((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3})|:))|(([0-9a-f]{1,4}:){5}(((:[0-9a-f]{1,4}){1,2})|:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3})|:))|(([0-9a-f]{1,4}:){4}(((:[0-9a-f]{1,4}){1,3})|((:[0-9a-f]{1,4})?:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3}))|:))|(([0-9a-f]{1,4}:){3}(((:[0-9a-f]{1,4}){1,4})|((:[0-9a-f]{1,4}){0,2}:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3}))|:))|(([0-9a-f]{1,4}:){2}(((:[0-9a-f]{1,4}){1,5})|((:[0-9a-f]{1,4}){0,3}:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3}))|:))|(([0-9a-f]{1,4}:){1}(((:[0-9a-f]{1,4}){1,6})|((:[0-9a-f]{1,4}){0,4}:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3}))|:))|(:(((:[0-9a-f]{1,4}){1,7})|((:[0-9a-f]{1,4}){0,5}:((25[0-5]|2[0-4]d|1dd|[1-9]?d)(.(25[0-5]|2[0-4]d|1dd|[1-9]?d)){3}))|:)))$/i.test(
-            input.format,
-          )))) &&
+        (__typia_transform__isFormatIpv4._isFormatIpv4(input.format) ||
+          __typia_transform__isFormatIpv6._isFormatIpv6(input.format)))) &&
     Array.isArray(input.array) &&
     3 <= input.array.length &&
     input.array.length <= 100 &&
     input.array.every(
       (elem) =>
         "string" === typeof elem &&
-        /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-          elem,
-        ),
+        __typia_transform__isFormatUuid._isFormatUuid(elem),
     ) &&
     input.map instanceof Map &&
     (() =>
@@ -280,20 +270,16 @@ export const checkCustomTag = (() => {
           Array.isArray(elem) &&
           elem.length === 2 &&
           "number" === typeof elem[0] &&
-          Math.floor(elem[0]) === elem[0] &&
-          0 <= elem[0] &&
-          elem[0] <= 4294967295 &&
+          __typia_transform__isTypeUint32._isTypeUint32(elem[0]) &&
           Array.isArray(elem[1]) &&
           1 <= elem[1].length &&
           elem[1].every(
             (elem) =>
               "string" === typeof elem &&
-              /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-                elem,
-              ),
+              __typia_transform__isFormatUuid._isFormatUuid(elem),
           ),
       ))();
-  return (input) => "object" === typeof input && null !== input && $io0(input);
+  return (input) => "object" === typeof input && null !== input && _io0(input);
 })();
 ```
   </Tab>
@@ -434,7 +420,7 @@ interface CustomTag {
 ```javascript filename="is.tag.js" showLineNumbers
 import typia from "typia";
 export const checkCustomTag = (() => {
-  const $io0 = (input) =>
+  const _io0 = (input) =>
     "number" === typeof input.type &&
     Math.floor(input.type) === input.type &&
     0 <= input.type &&
@@ -446,7 +432,7 @@ export const checkCustomTag = (() => {
     "string" === typeof input.string &&
     3 <= input.string.length &&
     "string" === typeof input.pattern;
-  return (input) => "object" === typeof input && null !== input && $io0(input);
+  return (input) => "object" === typeof input && null !== input && _io0(input);
 })();
 ```
   </Tab>
@@ -648,23 +634,12 @@ type PowerOf<Value extends number> = typia.tags.TagBase<{
   </Tab>
   <Tab>
 ```javascript showLineNumbers filename="is.tag.custom.js"
-"use strict";
-var __importDefault =
-  (this && this.__importDefault) ||
-  function (mod) {
-    return mod && mod.__esModule ? mod : { default: mod };
-  };
-Object.defineProperty(exports, "__esModule", { value: true });
-exports.checkTagCustom = void 0;
-const typia_1 = __importDefault(require("typia"));
-const checkTagCustom = (input) => {
-  return (
-    "object" === typeof input &&
-    null !== input &&
+import * as __typia_transform__isFormatUuid from "typia/lib/internal/_isFormatUuid.js";
+import typia from "typia";
+export const checkTagCustom = (() => {
+  const _io0 = (input) =>
     "string" === typeof input.id &&
-    /^(?:urn:uuid:)?[0-9a-f]{8}-(?:[0-9a-f]{4}-){3}[0-9a-f]{12}$/i.test(
-      input.id,
-    ) &&
+    __typia_transform__isFormatUuid._isFormatUuid(input.id) &&
     "string" === typeof input.dollar &&
     input.dollar[0] === "$" &&
     !isNaN(Number(input.dollar.substring(1).split(",").join(""))) &&
@@ -675,10 +650,9 @@ const checkTagCustom = (input) => {
       const denominator = Math.log(2);
       const value = Math.log(input.powerOf) / denominator;
       return Math.abs(value - Math.round(value)) < 1e-8;
-    })()
-  );
-};
-exports.checkTagCustom = checkTagCustom;
+    })();
+  return (input) => "object" === typeof input && null !== input && _io0(input);
+})();
 ```
   </Tab>
 </Tabs>
